fix footer position on mobile

--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,7 @@ footer {
     bottom: 5px;
 }
 
-@media screen and (max-width: 580px),
-       screen and (max-height: 980px) {
+@media screen and (max-width: 580px) and (max-height: 980px) {
     footer {
         position: relative;
         bottom: 5px;
